lab10/zad5/my-frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-frontend-depl
  labels:
    app: reactapp

spec:
  template:
    metadata:
      name: my-frontend-pod
      labels:
        app: reactapp
    spec:
      containers:
        - name: my-frontend-container
          image: 6745345/my-react-image:release0

  replicas: 2
  selector:
    matchLabels:
      app: reactapp
---
apiVersion: v1
kind: Service
metadata:
  name: my-frontend-service

spec:
  selector:
    app: reactapp
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
