lab10/zad5/my-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: my-frontend-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /my-frontend-service
        pathType: Prefix
        backend:
          service:
            name: my-frontend-service
            port:
              number: 3000
